# kafka_demo

./: Cargo.toml  config.yaml  docker-compose.yml  start.sh
doc/: arch.md  arch_cn.md  items_parameter_changes_cn.md  plan_multi_item_seckill.md
src/: args.rs  client_kafka.rs  common.rs  control_api.rs  lib.rs  log_worker.rs  main.rs  redis_state.rs  server_kafka.rs
