[package]
name = "kafka_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["full"] }
rdkafka = {version = "0.37", features = ["tokio"] }
futures = "0.3.31"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "server_kafka"
path = "src/server_kafka.rs"

[[bin]]
name = "client_kafka"
path = "src/client_kafka.rs"
