[package]
name = "kafka_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45", features = ["full"] }
rdkafka = {version = "0.37", features = ["tokio"] }
futures = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
redis = { version = "0.31", features = ["tokio-comp", "aio"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
serde_yaml = "0.9"
deadpool-redis = "0.21"
chrono = "0.4"
axum = "0.8"

[[bin]]
name = "server_kafka"
path = "src/server_kafka.rs"

[[bin]]
name = "client_kafka"
path = "src/client_kafka.rs"

[[bin]]
name = "log_worker"
path = "src/log_worker.rs"

[[bin]]
name = "control_api"
path = "src/control_api.rs"
